--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://your.site/
+baseURL: https://craig-shenton.github.io/govuk-hugo/
 languageCode: en-gb
 title: YHSXN
 theme: govukhugo
